--- a/hooks/build
+++ b/hooks/build
@@ -3,7 +3,7 @@
 echo "------ HOOK START - BUILD -------"
 
 DOCKER_HUB_NAME=nmtan/rdf4j
-DOCKER_TAGS=(2.4.0 2.3.2 2.2.4 2.1.6 2.0.3 1.0.4 "latest")
+DOCKER_TAGS=(2.4.0 2.3.2 2.2.4 2.1.6 2.0.3 1.0.4 latest)
 BUILD_DATE=`date -u +"%Y-%m-%dT%H:%M:%SZ"`
 
 function build_image(){
