--- a/hooks/build
+++ b/hooks/build
@@ -12,15 +12,19 @@ function build_image(){
         return 0;
     fi
 
+    tag_name="${1}"
+    image_full_name="${DOCKER_HUB_NAME}:${tag_name}" .
     if [ "${1}" == "latest" ]; then
         # Latest version - we do not need the version argument - latest version is defined in Dockerfile itself
         docker build --rm --build-arg BUILD_DATE="${BUILD_DATE}" \
-            -t "${DOCKER_HUB_NAME}:${1}" .
+            -t "${image_full_name}"
     else
         docker build --rm --build-arg BUILD_DATE="${BUILD_DATE}" \
             --build-arg RDF4J_VERSION="${1}" \
-            -t "${DOCKER_HUB_NAME}:${1}" .
+            -t "${image_full_name}"
     fi
+
+    docker push "${image_full_name}"
 }
 
 for tag in "${DOCKER_TAGS[@]}"; do
